# CryptoForecaster

./: .gitignore  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: ci.yml
data/: test.duckdb
notebooks/: demo.ipynb
src/cryptoforecaster/: __init__.py  backtest.py  cli.py  cli_old.py  config.py  database.py  example_config.yaml  fetcher.py  pipeline.py  predictor.py  schemas.py  trainer.py
src/cryptoforecaster/cli/: __init__.py
src/cryptoforecaster/forecasting/: __init__.py  predictor.py
src/cryptoforecaster/ingestion/: __init__.py  fetcher.py
src/cryptoforecaster/modeling/: __init__.py  arima_model.py  base.py  ensemble.py  prophet_model.py  trainer.py
src/cryptoforecaster/storage/: __init__.py  database.py  models.py
src/cryptoforecaster/strategy/: __init__.py
src/cryptoforecaster/utils/: __init__.py  logger.py  visualizer.py
tests/: test_backtest.py  test_database.py  test_fetcher.py  test_models.py  test_strategy.py
