[project]
name = "cryptoforecaster"
version = "0.1.0"
description = "Cryptocurrency price forecasting with AI predictions and trading strategies"
readme = "README.md"
authors = [
    { name = "Kevin Wierman", email = "kwierman@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "typer>=0.24.1",
    "typer>=0.24.1",
    "sqlmodel>=0.0.21",
    "duckdb>=1.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "loguru>=0.7.0",
    "rich>=13.0.0",
    "scikit-learn>=1.3.0",
    "prophet>=1.1.0",
    "statsmodels>=0.14.0",
    "torch>=2.0.0",
    "joblib>=1.3.0",
    "pyyaml>=6.0.0",
    "httpx>=0.28.1",
    "pytz>=2024.1",
    "plotly>=6.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.scripts]
cryptoforecaster = "cryptoforecaster.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short"

[build-system]
requires = ["uv_build>=0.10.5,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.5",
    "types-requests>=2.32.4.20260107",
]

[tool.mypy]
ignore_missing_imports = true
